--- a/src/components/screens/mainMenu.module.scss
+++ b/src/components/screens/mainMenu.module.scss
@@ -1,9 +1,14 @@
+@import "../breakpoints.scss";
+
 .background {
-    background: radial-gradient(circle, #fafff3 0%, #6eb118 35%, black 100%);
+    background: radial-gradient(circle, rgb(250 255 243 / 20%) 0%, rgb(110 177 24 / 20%) 35%, rgb(0 0 0 / 20%) 100%);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    height: 100%;
+    // opacity: 0.2;
+    background-color: #0B1500;
 }
 
 .logoHeader {
@@ -11,9 +16,31 @@
     justify-content: center;
     align-items: center;
     padding: 16px 0;
-    //Movil landscape mini
-    @media only screen  and (max-height: 300px) and (orientation: landscape) {
-        padding: 8px 0;
+    // //Movil landscape mini
+    // @media only screen  and (max-height: 300px) and (orientation: landscape) {
+    //     padding: 8px 0;
+    // }
+    
+}
+
+.logo {
+    width: 64px;
+    height: auto;
+    filter: drop-shadow(0 4px 0 rgba(0, 0, 0, 0.55));
+    @media (min-width: #{map-get($breakpoints, 'md' )}) {
+        width: 80px;
+        filter: drop-shadow(0 5px 0 rgba(0, 0, 0, 0.55));
+    }
+    @media (min-width: #{map-get($breakpoints, 'lg' )}) {
+        width: 96px;
+    }
+    @media (min-width: #{map-get($breakpoints, 'xl' )}) {
+        width: 124px;
+        filter: drop-shadow(0 8px 0 rgba(0, 0, 0, 0.55));
+    }
+    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
+        width: 224px;
+        filter: drop-shadow(0 14px 0 rgba(0, 0, 0, 0.55));
     }
 }
 
@@ -26,26 +53,20 @@
     @media (orientation: landscape) {
         flex-direction: row;
     }
-    @media (min-width: 768px) {
-        .gameData {
+    @media (min-width: #{map-get($breakpoints, 'md' )}) {
             padding-top: 80px;
-        }
     }
-    @media (min-width: 1024px) {
-        .gameData {
+    @media (min-width: #{map-get($breakpoints, 'lg' )}) {
             padding-top: 96px;
-        }
     }
-    @media (min-width: 1920px) {
-        .gameData {
+    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
             padding-top: 124px;
-        }
     }
     @media (min-width: 2800px) {
         padding-top: 224px;
     }
     //Movil landscape mini
-    @media only screen and (max-height: 300px) and (orientation: landscape) {
+    @media (max-height: 300px) {
         padding-top: 48px;
     }
 }
@@ -69,42 +90,23 @@
 .image {
     width: 65px;
     height: auto;
-    @media (max-width: 540px) {
-        &--mob {
-            display: inline-block;
-        }
+    @media (min-width: #{map-get($breakpoints, 'sm' )}) {
+        width: 96px;
     }
-    @media (min-width: 541px) and (max-width: 1023px) 
-    and (min-height: 301px) and (max-height: 600px) {
-        &--tab {
-            display: inline-block;
-        }
+    @media (min-width: #{map-get($breakpoints, 'lg' )}) {
+        width: 180px;
     }
-    @media (min-width: 541px) and (max-width: 1023px) 
-    and (min-height: 601px) {
-        &--desk {
-            display: inline-block;
-        }
+    @media (min-width: #{map-get($breakpoints, 'xxl' )}) {
+        width: 220px;
     }
-    @media (min-width: 1024px) and (max-width: 1399px) {
-        &--desk {
-            display: inline-block;
-        }
-    }
-    @media (min-width: 1400px) and (max-width: 1919px) {
-        &--hdesk {
-            display: inline-block;
-        }
-    }
-    @media (min-width: 1920px) and (max-width: 3839px) {
-        &--tv {
-            display: inline-block;
-        }
+    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
+        width: 280px;
     }
     @media (min-width: 3840px) {
-        &--4k {
-            display: inline-block;
-        }
+        width: 360px;
+    }
+    @media (max-width: 540px) {
+        width: 80px;
     }
     //Movil landscape mini
     @media only screen 
@@ -182,7 +184,7 @@
     width: 100%;
     height: 42%;
     box-shadow: 0 -1px 0 rgba(110,177,24,1);
-
+    background: #6eb118;
     @media only screen and (orientation: landscape) {
         height: 48%;
     }
