--- a/src/index.scss
+++ b/src/index.scss
@@ -9,4 +9,9 @@
 body {
     font-family: 'Nunito', Arial, Helvetica, sans-serif;
     margin: 0;
+    height: 100%;
+}
+
+:root {
+    height: 100%;
 }
