--- a/src/components/screens/mainMenu.module.scss
+++ b/src/components/screens/mainMenu.module.scss
@@ -34,11 +34,11 @@
     @media (min-width: #{map-get($breakpoints, 'lg' )}) {
         width: 96px;
     }
-    @media (min-width: #{map-get($breakpoints, 'xl' )}) {
+    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
         width: 124px;
         filter: drop-shadow(0 8px 0 rgba(0, 0, 0, 0.55));
     }
-    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
+    @media (min-width: 2800) {
         width: 224px;
         filter: drop-shadow(0 14px 0 rgba(0, 0, 0, 0.55));
     }
@@ -132,19 +132,21 @@
     line-height: 1.1;
     text-overflow: ellipsis;
     overflow: hidden;
-    @media (min-width: 845px) {
+    text-shadow: 0 2px 0 #070e00;
+    color: #fafff3;
+    @media (min-width: #{map-get($breakpoints, 'md' )}) {
         font-size: 24px;
     }
-    @media (min-width: 1024px) {
+    @media (min-width: #{map-get($breakpoints, 'lg' )}) {
         font-size: 40px;
     }
-    @media (min-width: 1920px) {
+    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
         font-size: 64px;
     }
     @media (min-width: 3200px) {
         font-size: 96px;
     }
-    @media (orientation: landscape) and (max-height: 540px) {
+    @media (max-height: 540px) {
         font-size: 14px;
     }
 }
@@ -154,20 +156,21 @@
     font-weight: 900;
     letter-spacing: 1px;
     line-height: 1;
-    transform: translateY(-4px);
-    @media (min-width: 845px) {
+    color: #6eb118;
+    text-shadow: 0 2px 0 black;
+    @media (min-width: #{map-get($breakpoints, 'md' )}) {
         font-size: 18px;
     }
-    @media (min-width: 1024px) {
+    @media (min-width: #{map-get($breakpoints, 'lg' )}) {
         font-size: 24px;
     }
-    @media (min-width: 1920px) {
+    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
         font-size: 40px;
     }
     @media (min-width: 3200px) {
         font-size: 56px;
     }
-    @media (orientation: landscape) and (max-height: 540px) {
+    @media (max-height: 540px) {
         font-size: 11px;
     }
 }
@@ -175,7 +178,7 @@
 .footerWrapper {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     bottom: 0;
@@ -218,4 +221,12 @@
         line-height: 1.5;
         color: white;
     }
+}
+
+.footerBottom {
+    width: 100%;
+    height: 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
