--- a/src/components/GameUI.module.scss
+++ b/src/components/GameUI.module.scss
@@ -1,8 +1,10 @@
 // ================== Botonera =================== */
 .buttonMenu {
+    position: absolute;
+    bottom: 16px;
+    right: 16px;
     display: flex;
     justify-content: flex-end;
-    margin-left: auto;
     pointer-events: none;
 }
 
@@ -21,13 +23,6 @@
     border-radius: 4px;
     pointer-events: all;
     cursor: pointer;
-    transition: all 0.2s ease-out 0.2s;
-    // @media (min-width) {
-    //     width: 40px;
-    //     height: 40px;
-    //     margin-left: 6px;
-    //     box-shadow: 0 3px 0 0 rgba(0, 0, 0, 0.2), 0 0 0 3px rgba(0, 0, 0, 0.0), 0 0.5px 0 0 rgba(0, 0, 0, 0.6), inset 0 1px 0 rgba(255,255,255,0.5);
-    // }
     &:hover, &:focus {
         background: rgba(255,255,255,0.8);
         transform: scale(1.05);
@@ -37,6 +32,8 @@
             transition: all 0.2s ease-in;
             path {
                 transition: transform 0.2s ease-in;
+                // fill: rgb(110, 177, 24);
+                stroke: rgb(110, 177, 24);
             }
         }
     }
@@ -63,6 +60,7 @@
                 transition: all 0.2s ease-out 0.2s;
                 path {
                     transition: all 0.2s ease-out 0.2s;
+                    fill: white;
                 }
             }
         }
