--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -1,19 +1,21 @@
 .button {
-    padding: 0;
-    margin: 0;
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    height: 3rem;
+    min-width: 220px;
     max-width: 300px;
-    font-family: "Nunito", "Segoe UI", Segoe, Helvetica, Arial, sans-serif;
+    font-family: 'Nunito', "Segoe UI", Segoe, Helvetica, Arial, sans-serif;
+    font-size: 1rem;
     font-weight: 700;
     letter-spacing: 0.5px;
     text-decoration: none;
+    color: green;
+    border-radius: 1.5rem;
+    text-rendering: optimizeLegibility;
+    -webkit-tap-highlight-color: transparent;
+    cursor: pointer;
     outline: 0;
-    min-width: 320px;
-    height: 3.5rem;
-    border-radius: 1.75rem;
-    font-size: 1.25rem;
     color: #070e00;
     background: #f2ca0d;
     border: 1px solid #f2ca0d;
