--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+button:not(:disabled) {
+    cursor: pointer;
+}
+
 *::before, *::after {
     box-sizing: inherit;
 }
