--- a/src/components/activityLogin/activityLogin.module.scss
+++ b/src/components/activityLogin/activityLogin.module.scss
@@ -22,7 +22,6 @@
         overflow: hidden;
         border: 1px solid white;
         transform: scale(1);
-        transition: all .15s ease;
 
         img {
             width: 30px;
@@ -39,15 +38,14 @@
         display: inline-flex;
         justify-content: flex-start;
         align-items: center;
-        margin: 0;
-        padding: 0;
         color: white;
-        line-height: 1;
+        font-size: 200px;
+        font-weight: 900;
         letter-spacing: 0.6px;
+        line-height: 20px;
 
         .activityLogin__notIdentified {
             font-size: 18px;
-            color: white;
             font-weight: 600;
             text-decoration: none;
 
