--- a/src/components/screens/mainMenu.module.scss
+++ b/src/components/screens/mainMenu.module.scss
@@ -186,6 +186,7 @@
     right: 0;
     width: 100%;
     height: 42%;
+    padding-top: 9px;
     box-shadow: 0 -1px 0 rgba(110,177,24,1);
     background: #6eb118;
     @media only screen and (orientation: landscape) {
@@ -196,6 +197,10 @@
         padding: 0;
         align-items: flex-start;
     }
+}
+
+.buttonWrapper {
+    padding-bottom: 68px;
 }
 
 .decoration {
