--- a/src/components/screens/mainMenu.module.scss
+++ b/src/components/screens/mainMenu.module.scss
@@ -50,6 +50,7 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
+    padding-bottom: 45px;
     @media (orientation: landscape) {
         flex-direction: row;
     }
@@ -134,6 +135,7 @@
     overflow: hidden;
     text-shadow: 0 2px 0 #070e00;
     color: #fafff3;
+    margin: 0;
     @media (min-width: #{map-get($breakpoints, 'md' )}) {
         font-size: 24px;
     }
@@ -151,7 +153,7 @@
     }
 }
 .gameType {
-    margin-top: 4px;
+    margin-top: 0;
     font-size: 14px;
     font-weight: 900;
     letter-spacing: 1px;
