--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,4 +10,10 @@ $breakpoints : (
     xxxl: 1920px, //in-hd-screen
 );
 
+$text-2xl: var(--text-2xl);
 $text-xl: var(--text-xl);
+$text-lg: var(--text-lg);
+$text-md: var(--text-md);
+$text-sm: var(--text-sm);
+$text-xs: var(--text-xs);
+$text-2xs: var(--text-2xs);
