--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/variables.scss" as *;
+
 .button {
     display: inline-flex;
     justify-content: center;
@@ -6,7 +8,7 @@
     min-width: 220px;
     max-width: 300px;
     font-family: 'Nunito', "Segoe UI", Segoe, Helvetica, Arial, sans-serif;
-    font-size: 1rem;
+    font-size: $text-md;
     font-weight: 700;
     letter-spacing: 0.5px;
     border-radius: 1.5rem;
