--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -18,6 +18,22 @@
     border: 1px solid #f2ca0d;
     border: 1px solid transparent;
     box-shadow: 0 5px 0 rgba(0, 0, 0, 0.3);
+
+    @media (min-width: #{map-get($breakpoints, 'md' )}) {
+        min-width: 300px;
+        height: 3.25rem;
+        border-radius: 1.625rem;
+    }
+    @media (min-width: #{map-get($breakpoints, 'lg' )}) {
+        min-width: 320px;
+        height: 3.5rem;
+        border-radius: 1.75rem;
+    }
+    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
+        min-width: 340px;
+        height: 4rem;
+        border-radius: 2rem;
+    }
 }
 
 .svg {
