--- a/src/components/GameUI.module.scss
+++ b/src/components/GameUI.module.scss
@@ -1,10 +1,28 @@
+@import "./breakpoints.scss";
+
 .buttonMenu {
     width: 100%;
     position: absolute;
     bottom: 4px;
+    right: 2px;
     padding: 0 3px 3px;
     display: flex;
     justify-content: flex-end;
+    gap: 6px;
+
+    @media (min-width: #{map-get($breakpoints, 'md' )}) {
+        gap: 12px;
+    }
+    @media (min-width: #{map-get($breakpoints, 'lg' )}) {
+        // min-width: 320px;
+        // height: 3.5rem;
+        // border-radius: 1.75rem;
+    }
+    @media (min-width: #{map-get($breakpoints, 'xxxl' )}) {
+        // min-width: 340px;
+        // height: 4rem;
+        // border-radius: 2rem;
+    }
 }
 
 .hideTouchDevice {
