--- a/src/components/screens/gameWin.module.scss
+++ b/src/components/screens/gameWin.module.scss
@@ -28,3 +28,54 @@
         transform: rotate(359deg);
     }
 }
+
+// .confettiWrapper {
+//     position: relative;
+// }
+
+.titleWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 78px 0;
+    color: #fafff3;
+    text-shadow: 0 4px 0 #2b4b04;
+    box-shadow: 0 4px 0 #2b4b04;;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 900;
+    text-align: center;
+}
+
+.title {
+    font-size: 10vw;
+    line-height: 0.7;
+}
+
+.subtitle {
+    font-size: 5vw;
+}
+
+.cup {
+    padding: 32px 0 10px 0;
+    filter: drop-shadow(0px 4px 0px #2b4b04);
+}
+
+.pointsWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 220px;
+    height: 48px;
+    line-height: 1.05;
+    border-top: 2px solid #fafff3;
+    box-shadow: inset 0 2px 0 #1b3101;
+}
+
+.pointsTitle {
+    font-size: 12px;
+}
+
+.pointsValue {
+    font-size: 32px;
+}
