--- a/src/components/screens/gameOver.module.scss
+++ b/src/components/screens/gameOver.module.scss
@@ -12,35 +12,14 @@
     overflow: hidden;
 }
 
-.svg {
-    width: 1600px;
-    height: auto;
-    opacity: 0.3;
-    animation: rotate 60s linear forwards infinite;
-}
-
-@keyframes rotate {
-    from {
-        transform: rotate(0deg);
-    }
-    
-    to {
-        transform: rotate(359deg);
-    }
-}
-
-// .confettiWrapper {
-//     position: relative;
-// }
-
 .titleWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 78px 0;
     color: #fafff3;
-    text-shadow: 0 4px 0 #2b4b04;
-    box-shadow: 0 4px 0 #2b4b04;;
+    text-shadow: 0 6px 0 #c2371a;
+    box-shadow: 0 6px 0 #c2371a;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 900;
@@ -48,17 +27,9 @@
 }
 
 .title {
-    font-size: 10vw;
-    line-height: 0.7;
-}
-
-.subtitle {
-    font-size: 5vw;
-}
-
-.cup {
-    padding: 32px 0 10px 0;
-    filter: drop-shadow(0px 4px 0px #2b4b04);
+    padding-bottom: 16px;
+    font-size: 18vw;
+    line-height: 0.8;
 }
 
 .pointsWrapper {
@@ -69,7 +40,7 @@
     height: 48px;
     line-height: 1.05;
     border-top: 2px solid #fafff3;
-    box-shadow: inset 0 2px 0 #1b3101;
+    text-shadow: 0 4px 0 #c2371a;
 }
 
 .pointsTitle {
